--- a/Text1.html
+++ b/Text1.html
@@ -1,6 +1,11 @@
 <html>
+<head></head>
+<body>
+    <a href="./text2.html"رابط الى صفحتى الثانى></a>
     <h1> salma </h1>
         <h2>هذا موقعى الاول
         </h2>
     <p>اخترت مسار الويب لانى اريد انشاء موقعى الخاص</p>
+    <img src="./html.jpg" alt="Html" width="400px" height="400px">
+        </body>
 </html>
